# chia-blockchain-resources

./: .eslintrc.json  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CONTRIBUTING.md  README.md  RESOURCES.md  package.json  pyproject.toml
docs/: BUILD_HISTORY.md
scripts/: setup.ps1  setup.sh
