# Python Project Configuration
# Used by black, isort, mypy, pytest, and other tools

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chia-blockchain-resources"
version = "1.0.0"
description = "Curated Chia blockchain development resources"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "acceptc00kies"}
]
keywords = ["chia", "blockchain", "chialisp", "cryptocurrency"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "black>=24.2.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-simplify",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
chia = [
    "chia-dev-tools>=1.2.0",
    "clvm>=0.9.7",
    "clvm_tools>=0.4.6",
]

# =============================================================================
# Black - Python Formatter
# =============================================================================
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | references
  | core
  | smart-contracts
  | gaming
  | sdks
  | tools
  | documentation
  | climate
  | forks
  | misc
)/
'''

# =============================================================================
# isort - Import Sorter
# =============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [
    ".eggs",
    ".git",
    ".venv",
    "node_modules",
    "references",
    "core",
    "smart-contracts",
    "gaming",
    "sdks",
    "tools",
    "documentation",
    "climate",
    "forks",
    "misc",
]
known_first_party = ["chia"]
known_third_party = ["clvm", "clvm_tools", "blspy"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# =============================================================================
# MyPy - Type Checker
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
exclude = [
    "references/",
    "core/",
    "smart-contracts/",
    "gaming/",
    "sdks/",
    "tools/",
    "documentation/",
    "climate/",
    "forks/",
    "misc/",
    "venv/",
    "node_modules/",
]

# =============================================================================
# Pytest - Testing
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
branch = true
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/node_modules/*",
    "references/*",
    "core/*",
    "smart-contracts/*",
    "gaming/*",
    "sdks/*",
    "tools/*",
    "documentation/*",
    "climate/*",
    "forks/*",
    "misc/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# =============================================================================
# Bandit - Security Linter
# =============================================================================
[tool.bandit]
exclude_dirs = [
    "tests",
    "references",
    "core",
    "smart-contracts",
    "gaming",
    "sdks",
    "tools",
    "documentation",
    "climate",
    "forks",
    "misc",
]
skips = ["B101", "B311"]

# =============================================================================
# Ruff - Fast Python Linter (alternative to flake8)
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "node_modules",
    "references",
    "core",
    "smart-contracts",
    "gaming",
    "sdks",
    "tools",
    "documentation",
    "climate",
    "forks",
    "misc",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function call in default argument
]
